@@ -1,5 +1,8 @@
 2012-08-03  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-internal.lisp (show-child): Show unmanaged windows
+	on (maybe) current child in all roots.
+
 	* src/clfswm-util.lisp (find-child-under-mouse-in-child-tree):
 	Handle children from all roots instead of from  *root-frame*.
 
